--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "@adius/yaml2json",
   "version": "0.1.2",
   "description": "A stream transformer to convert YAML to JSON.",
-  "main": "build/index.js",
+  "main": "source/index.js",
+  "bin": "cli.js",
   "scripts": {
-    "test": "babel-node test/index.js",
-    "build": "babel -d build source",
-    "prepublish": "npm test && npm run build"
+    "test": "node test/index.js",
+    "prepublishOnly": "npm test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/adius/yaml2json.git"
+    "url": "git+https://github.com/ad-si/yaml2json.git"
   },
   "keywords": [
     "yaml2json",
@@ -20,13 +20,13 @@
   "author": "Adrian Sieber",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/adius/yaml2json/issues"
+    "url": "https://github.com/ad-si/yaml2json/issues"
   },
-  "homepage": "https://github.com/adius/yaml2json#readme",
-  "devDependencies": {
-    "babel": "^5.8.29"
-  },
+  "homepage": "https://github.com/ad-si/yaml2json#readme",
   "dependencies": {
-    "js-yaml": "^3.4.3"
+    "js-yaml": "^3.13.1"
+  },
+  "devDependencies": {
+    "streamtester": "^0.2.0"
   }
 }
